--- a/booking/app/config/services.yml
+++ b/booking/app/config/services.yml
@@ -4,6 +4,8 @@ parameters:
 #    parameter_name: value
 
 services:
-#    service_name:
-#        class: AppBundle\Directory\ClassName
-#        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+  app.twig_extension:
+    class: AppBundle\Twig\DemoExtension
+    public: false
+    tags:
+        - { name: twig.extension }
