dodao primjer Doctrine DBAL transakcija, refaktorirao testove za bazu podataka

--- a/example/composer.json
+++ b/example/composer.json
@@ -2,6 +2,9 @@
 	"autoload": {
 		"psr-4": {"Adriatic\\PHPAkademija\\": "src/"}
 	},
+	"autoload-dev": {
+		"psr-4": { "Adriatic\\PHPAkademija\\Test\\": "test/" }
+	},
 
 	"require-dev": {
 		"phpunit/phpunit": "~5.5",
