--- a/booking/composer.json
+++ b/booking/composer.json
@@ -25,7 +25,8 @@
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0"
+        "symfony/phpunit-bridge": "^3.0",
+        "phpunit/phpunit": "^5.6.0"
     },
     "scripts": {
         "symfony-scripts": [
@@ -45,7 +46,7 @@
     },
     "config": {
         "platform": {
-            "php": "5.5.9"
+            "php": "7.0.11"
         }
     },
     "extra": {
