--- a/example/composer.json
+++ b/example/composer.json
@@ -8,6 +8,7 @@
 
 	"require-dev": {
 		"phpunit/phpunit": "~5.5",
-		"doctrine/orm": "^2.5"
+		"doctrine/orm": "^2.5",
+		"raveren/kint": "~1.0.10"
 	}
 }
