--- a/booking/app/config/security.yml
+++ b/booking/app/config/security.yml
@@ -29,10 +29,12 @@ security:
             anonymous: ~
             # activate different ways to authenticate
 
-            http_basic: ~
+            # http_basic: ~
             # http://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
 
-            # form_login: ~
+            form_login:
+                login_path: AppBundle_Security_login
+                check_path: AppBundle_Security_login
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
 
     access_control:
