--- a/booking/app/config/security.yml
+++ b/booking/app/config/security.yml
@@ -42,12 +42,14 @@ security:
             # http://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
 
             provider: database_provider
-
             form_login:
                 login_path: AppBundle_Security_login
                 check_path: AppBundle_Security_login
                 csrf_token_generator: security.csrf.token_manager
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
+            logout:
+                path:   /logout
+                target: /
 
     access_control:
         # require ROLE_ADMIN for /admin*
