dodao primjer prevođenja unutar controllera

--- a/booking/app/config/config.yml
+++ b/booking/app/config/config.yml
@@ -8,6 +8,7 @@ parameters:
     locale: en
 
 framework:
+    translator: { fallbacks: [en] }
     #esi:             ~
     #translator:      { fallbacks: ["%locale%"] }
     secret:          "%secret%"
