--- a/booking/app/config/config_test.yml
+++ b/booking/app/config/config_test.yml
@@ -2,6 +2,7 @@ imports:
     - { resource: config_dev.yml }
 
 framework:
+    translator: { fallbacks: [en] }
     test: ~
     session:
         storage_id: session.storage.mock_file
