--- a/booking/app/config/parameters.yml.dist
+++ b/booking/app/config/parameters.yml.dist
@@ -2,8 +2,8 @@
 # Set parameters here that may be different on each deployment target of the app, e.g. development, staging, production.
 # http://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
-    database_host:     127.0.0.1
-    database_port:     ~
+    database_host:     phpacademy
+    database_port:     3306
     database_name:     symfony
     database_user:     root
     database_password: ~
@@ -11,7 +11,7 @@ parameters:
     # database_path: "%kernel.root_dir%/data.db3"
 
     mailer_transport:  smtp
-    mailer_host:       127.0.0.1
+    mailer_host:       phpacademy
     mailer_user:       ~
     mailer_password:   ~
 
