ažurirana Symfony konfiguracija za slanje mailova, dodao send email primjer

--- a/booking/app/config/parameters.yml.dist
+++ b/booking/app/config/parameters.yml.dist
@@ -14,6 +14,7 @@ parameters:
     mailer_host:       phpacademy
     mailer_user:       ~
     mailer_password:   ~
+    mailer_port:       1025
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
