--- a/booking/app/config/config.yml
+++ b/booking/app/config/config.yml
@@ -68,4 +68,5 @@ swiftmailer:
     host:      "%mailer_host%"
     username:  "%mailer_user%"
     password:  "%mailer_password%"
+    port:  "%mailer_port%"
     spool:     { type: memory }
