--- a/booking/app/config/config.yml
+++ b/booking/app/config/config.yml
@@ -59,8 +59,15 @@ doctrine:
 
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
-        naming_strategy: doctrine.orm.naming_strategy.underscore
-        auto_mapping: true
+        entity_managers:
+            default:
+                naming_strategy: doctrine.orm.naming_strategy.underscore
+                mappings:
+                    default:
+                        type:       annotation
+                        dir:        '%kernel.root_dir%/../src'
+                        prefix:     'Agency\'
+                        is_bundle:  false
 
 # Swiftmailer Configuration
 swiftmailer:
